--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ./backend:/app
     networks:
       - app-network
+    depends_on:
+      - redis # Ensure backend starts after Redis is up
 
   frontend:
     build: ./client
@@ -21,6 +23,18 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: "redis/redis-stack:latest" # Use the latest Redis image
+    ports:
+      - "6379:6379" # Expose Redis default port
+    volumes:
+      - redis-data:/data # Persist data to a Docker volume
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  redis-data: # Define a Docker volume for Redis data persistence
