--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,13 @@
-# Use a smaller Node.js base image
-FROM node:18-alpine AS builder
+FROM node:18-alpine
 
-# Set the working directory
 WORKDIR /app
 
-# Copy only package.json and package-lock.json to leverage Docker cache
 COPY package*.json ./
 
-# Install dependencies
 RUN npm ci --only=production
 
-# Copy the rest of the application code
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 4000
 
-# Start the application
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
