--- a/client/default.conf
+++ b/client/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name localhost;
+    server_name _;
 
     location / {
         root /usr/share/nginx/html;
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000;
+        proxy_pass http://backend:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
